--- a/c-socket-server/.vscode/tasks.json
+++ b/c-socket-server/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "make",
+            "command": "make ../Makefile",
             "args": [],
             "group": {
                 "kind": "build",
