enhance systemd service configuration for SRK socket server with restart limits and delay

--- a/c-socket-server/socket_server.service
+++ b/c-socket-server/socket_server.service
@@ -3,10 +3,12 @@ Description=SRK Socket Server
 After=network.target
 
 [Service]
-ExecStart=/usr/local/bin/srk-server/srk-socket-server 192.168.100.22
 Restart=always
+RestartSec=5
 User=nobody
 Group=nogroup
+StartLimitIntervalSec=60
+StartLimitBurst=3
 
 [Install]
 WantedBy=multi-user.target
