--- a/c-socket-server/socket_server.service
+++ b/c-socket-server/socket_server.service
@@ -3,6 +3,7 @@ Description=SRK Socket Server
 After=network.target
 
 [Service]
+ExecStart=/usr/local/bin/srk-server/srk-socket-server 192.168.100.22
 Restart=always
 RestartSec=5
 User=nobody
