fix: update StartLimitInterval in systemd service configuration for SRK socket server

--- a/c-socket-server/socket_server.service
+++ b/c-socket-server/socket_server.service
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=5
 User=nobody
 Group=nogroup
-StartLimitIntervalSec=60
+StartLimitInterval=60s
 StartLimitBurst=3
 
 [Install]
