fix: update Makefile to include DLT library and enhance compilation flags

--- a/c-socket-server/Makefile
+++ b/c-socket-server/Makefile
@@ -1,5 +1,6 @@
 CC = gcc
-CFLAGS = -Iinclude -Wall
+CFLAGS = -Wall -Wextra -g
+LDFLAGS = -ldlt
 SRC = socket_server.c
 OBJ = $(SRC:.c=.o)
 TARGET = srk-socket-server
@@ -7,7 +8,10 @@ TARGET = srk-socket-server
 all: $(TARGET)
 
 $(TARGET): $(OBJ)
-	$(CC) -o $@ $^
+	$(CC) -o $@ $^ $(LDFLAGS)
+
+$(OBJ): $(SRC)
+	$(CC) $(CFLAGS) -c $<
 
 clean:
 	rm -f $(OBJ) $(TARGET)
